--- a/alap.css
+++ b/alap.css
@@ -2,10 +2,28 @@
     margin: auto;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
 }
+
 body{
-    background-color: green;
+    background-color: lightblue;
 }
+
 #rolam{
-    border-bottom: 5px solid black;
+    border: 2px solid grey;
+    background-color: white;
+    border-radius: 16px;
+}
+
+#rolam:hover{
+    background-color: lightgrey;
+
+}
+
+h1{
+    font-weight: bold;
+}
+
+table{
+    /* font-size: ; */
 }
