--- a/otthonom.css
+++ b/otthonom.css
@@ -1,9 +1,31 @@
 #vissza{
     width:75px;
-    border: 2px solid white;
+    border: 2px solid grey;
     border-radius: 16px;
     background-color: white;
 }
 #vissza:hover{
     background-color: lightgray;
+}
+
+body{
+    background-color: lightsalmon;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 125%;
+}
+
+.kep{
+    width: 30%;
+    margin-left:35%;
+    border: 5px solid black;
+    border-radius: 16px;
+}
+
+div{
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 16px;
+    padding-left: 20px;
+    text-align: center;
+    margin: 0 50px 0 50px;
 }
