--- a/rolam.css
+++ b/rolam.css
@@ -13,5 +13,26 @@ body{
 
 body{
     background-color: lightgreen;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 125%;
 }
 
+div{
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 16px;
+    padding-left: 20px;
+    text-align: center;
+    margin: 0 50px 0 50px;
+}
+
+#antiszoc{
+        height: 676px;
+        margin-left:37%;
+        border: 5px solid black;
+        border-radius: 16px;
+}
+
+li{
+    text-align: left;
+}
