--- a/rolam.css
+++ b/rolam.css
@@ -26,7 +26,7 @@ div{
     margin: 0 50px 0 50px;
 }
 
-#antiszoc{
+#kep{
         height: 676px;
         margin-left:37%;
         border: 5px solid black;
@@ -36,3 +36,4 @@ div{
 li{
     text-align: left;
 }
+
