--- a/hobbik.css
+++ b/hobbik.css
@@ -10,4 +10,25 @@
 
 body{
     background-color: purple;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 125%;
+}
+
+div{
+    background-color: white;
+    border: 5px solid black;
+    border-radius: 16px;
+    padding-left: 20px;
+    text-align: center;
+    margin: 0 50px 0 50px;
+}
+ol{
+    text-align: left;
+}
+
+.kep{
+    margin-left: 25%;
+    width: 50%;
+    border: 5px solid black;
+    border-radius: 16px;
 }
